make photo modal

--- a/photography.html
+++ b/photography.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/photography.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script type="text/javascript" src="scripts/master.js"></script>
+    <script type="text/javascript" src="#"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
@@ -54,7 +55,7 @@
 
       </div>
       <div id="photoContainer">
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2312.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2312.JPG">
             <img src="img/DSC_2312.JPG" alt="bird and water" width="600" height="400">
@@ -62,7 +63,7 @@
           <div class="desc">Meningie, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2297.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2297.JPG">
             <img src="img/DSC_2297.JPG" alt="houses facing river" width="600" height="400">
@@ -70,7 +71,7 @@
           <div class="desc">Port Noarlunga, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_1710.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_1710.JPG">
             <img src="img/DSC_1710.JPG" alt="mushroom" width="600" height="400">
@@ -78,7 +79,7 @@
           <div class="desc">Myponga Resovior, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_1688.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_1688.JPG">
             <img src="img/DSC_1688.JPG" alt="trees" width="600" height="400">
@@ -86,7 +87,7 @@
           <div class="desc">Myponga Resovior, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2371.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2371.JPG">
             <img src="img/DSC_2371.JPG" alt="stick insect" width="600" height="400">
@@ -94,7 +95,7 @@
           <div class="desc">Coorong, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_1235.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_1235.JPG">
             <img src="img/DSC_1235.JPG" alt="river" width="600" height="400">
@@ -102,7 +103,7 @@
           <div class="desc">Old Noarlunga, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2377.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2377.JPG">
             <img src="img/DSC_2377.JPG" alt="purple flower" width="600" height="400">
@@ -110,7 +111,7 @@
           <div class="desc">Coorong, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2330.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2330.JPG">
             <img src="img/DSC_2330.JPG" alt="lake and jetty" width="600" height="400">
@@ -118,7 +119,7 @@
           <div class="desc">Meningie, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2343.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2343.JPG">
             <img src="img/DSC_2343.JPG" alt="flowers" width="600" height="400">
@@ -126,7 +127,7 @@
           <div class="desc">Coorong, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_1755.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_1755.JPG">
             <img src="img/DSC_1755.JPG" alt="fountain" width="600" height="400">
@@ -134,7 +135,7 @@
           <div class="desc">State Library, Adelaide CBD</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2366.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2366.JPG">
             <img src="img/DSC_2366.JPG" alt="flower" width="600" height="400">
@@ -142,7 +143,7 @@
           <div class="desc">Onkaparinga Nat. Park, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2389.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2389.JPG">
             <img src="img/DSC_2389.JPG" alt="dry lake" width="600" height="400">
@@ -150,7 +151,7 @@
           <div class="desc">Salt Creek, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_1571.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_1571.JPG">
             <img src="img/DSC_1571.JPG" alt="river" width="600" height="400">
@@ -158,7 +159,7 @@
           <div class="desc">Hallet Cove Nat. Park, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2237.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2237.JPG">
             <img src="img/DSC_2237.JPG" alt="kangaroo" width="600" height="400">
@@ -166,7 +167,7 @@
           <div class="desc">Onkaparinga Nat. Park, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_2396.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2312.JPG">
             <img src="img/DSC_2396.JPG" alt="path accross lagoon" width="600" height="400">
@@ -174,7 +175,7 @@
           <div class="desc">Coorong, SA</div>
         </div>
       </div>
-      <div class="responsive" data-aos="zoom-in-up">
+      <div class="responsive" data-aos="zoom-in-up" onclick="showModal()" data-image="img/DSC_1509.JPG">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2312.JPG">
             <img src="img/DSC_1509.JPG" alt="path and clouds" width="600" height="400">
@@ -184,13 +185,29 @@
       </div>
     </div>
     <!-- Dynamic image viewing modal -->
-    <button id="myBtn">Open Modal</button>
-    <div id="myModal" class="modal">
+    <div id="imageModal" >
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+        <img id="imageClicked" src="img/DSC_1509.JPG" width="100%" height="auto" />
       </div>
-    </div> 
+    </div>
+    <script>
+    var modal = document.getElementById("imageModal");
+    var span = document.getElementsByClassName("close")[0];
+    function showModal() {
+      var image = event.currentTarget.dataset.image;
+      document.getElementById("imageClicked").src=image;
+      modal.style.display = "block";
+    }
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+    </script>
       <hr />
       <p class="subFooter">Last Updated: <span class="lastUpdated"></span> <span class="footerPadding"></span> <a href="https://github.com/Smartich0ke/nikolaipatrick.com" class="bodyGithubLink" ><br />View this website on GitHub</a></p>
     <div class="clearfix"></div>
