--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="photography.html">Photography</a>
-        <a href="projects.html">Projects</a>
+        <a href="underConstruction.html">Projects</a>
         <a href="contact.html">Contact</a>
       </div>
     </div>
