fix projects private

--- a/projects_private.html
+++ b/projects_private.html
@@ -203,7 +203,7 @@
           <span class="lastUpdated"></span>
           <span class="footerPadding"></span>
           <br />
-          Designed by a human / Created by a human
+          Designed by human / Created by a human
           <a href="https://github.com/Smartich0ke/nikolaipatrick.com" class="bodyGithubLink" ><br />View this website on GitHub</a>
         </p>
 
