update contact fields

--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,13 @@
     <meta property="og:description" content="Contact page" />
     <meta property="og:locale" content="en_AU" />
     <meta property="og:type" content="website" />
+
+    <!--Stylesheets-->
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!--Scripts-->
     <script type="text/javascript" src="scripts/master.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -30,6 +34,7 @@
       window.scrollTo(0, 0);
     }
     </script>
+
   </head>
   <body onload="onLoadFunctions()">
     <div class="dropdown">
@@ -49,22 +54,22 @@
         <p class="titleText" >Contact</p>
         <p class="contactHeading">Main Contacts</p>
         <ul>
-          <li>Email: <a class="profileName" href="#">nikolaipatricknp@gmail.com</a></li>
-          <li>Phone: <a class="profileName" href="#">123456789</a></li>
+          <li>Email: <a class="profileName" href="mailto:nikolaipatricknp@gmail.com?subject=Feedback">nikolaipatricknp@gmail.com</a></li>
+          <!--<li>Phone: <a class="profileName" href="#">123456789</a></li>-->
         </ul>
         <p class="contactHeading">Socials</p>
         <ul>
-          <li>instagram: <a class="profileName" href="#">@npatrick_photos</a></li>
-          <li>YouTube: <a class="profileName" href="#">Nikolai Patrick</a></li>
-          <li>Discord <a class="profileName" href="#">Artichoke#4180</a></li>
+          <li>instagram: <a class="profileName" href="https://www.instagram.com/npatrick_photos/">@npatrick_photos</a></li>
+          <li>YouTube: <a class="profileName" href="https://www.youtube.com/channel/UC4-lTd3J9tmKrJ7WAkfUgSw">Nikolai Patrick</a></li>
+          <li>Discord <a class="profileName" href="#" onclick="discordAlert()">Artichoke#4180</a></li>
 
         </ul>
         <p class="contactHeading">Other Profiles</p>
         <ul>
-          <li>GitHub: <a class="profileName" href="#">Smartich0ke</a></li>
-          <li>Reedit <a class="profileName" href="#">Smartich0ke</a></li>
-          <li>Geocaching: <a class="profileName" href="#">Smartich0ke</a></li>
-          <li>Stack: <a class="profileName" href="#">HotGlue</a></li>
+          <li>GitHub: <a class="profileName" href="https://github.com/Smartich0ke">Smartich0ke</a></li>
+          <li>Reddit <a class="profileName" href="https://www.reddit.com/user/Smartich0ke">Smartich0ke</a></li>
+          <li>Geocaching: <a class="profileName" href="https://www.geocaching.com/p/?guid=6bb2efec-7f62-4da9-9458-91ed7b48c5d1">Smartich0ke</a></li>
+          <li>Stack: <a class="profileName" href="https://stackexchange.com/users/10142602/hotglue">HotGlue</a></li>
         </ul>
         <hr />
         <p class="subFooter">
