make images float to bottom in projects

--- a/projects_private.html
+++ b/projects_private.html
@@ -69,7 +69,7 @@
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
         </div>
         <div class="projectContainer" data-aos="zoom-in-up">
-          <p class="projectTitle">Nikolaipatrick.com / Artichokenetwork.com</p>
+          <p class="projectTitle">Nikolaipatrick.com</p>
           <p class="projectDate">18/04/2022</p>
           <p class="projectDesc">
             The website you are looking at right now. Coded and built from
@@ -89,14 +89,10 @@
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
         </div>
         <div class="projectContainer" data-aos="zoom-in-up" data-aos-delay="50">
-          <p class="projectTitle">Project Title</p>
+          <p class="projectTitle">GC9KN7Z - An Advanced Geocache</p>
           <p class="projectDate">15/04/2022</p>
           <p class="projectDesc">
-            This is where the project description will go.
-
-            This is where the project description will go.
-
-            This is where the project description will go.
+            GC9KN7Z (aka Smartich0ke's Lost Wifi Password) is a geocache that involves a veriety of technical field puzzles including NFC tags, QR codes and WiFi APs.
           </p>
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
         </div>
