homepage link redirects to root instead of index

--- a/photography.html
+++ b/photography.html
@@ -41,7 +41,7 @@
     <div class="dropdown">
       <img src="img/circle-chevron-down-solid.svg" onclick="openMenu()" class="dropbtn" width="32" height="32" />
       <div id="myDropdown" class="dropdown-content">
-        <a href="index.html">Home</a>
+        <a href="https://nikolaipatrick.com">Home</a>
         <a href="about.html">About</a>
         <a href="photography.html">Photography</a>
         <a href="projects.html">Projects</a>
