--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   </head>
   <body onload="onLoadFunctions()">
     <div class="dropdown">
-      <img src="img/circle-chevron-down-solid.svg" onclick="openMenu()" class="dropbtn" width="32" height="32" />
+      <img src="img/bars-solid.svg" onclick="openMenu()" class="dropbtn" width="32" height="32" />
       <div id="myDropdown" class="dropdown-content">
         <a href="https://nikolaipatrick.com">Home</a>
         <a href="about.html">About</a>
